# po-projekt1

./: .clang-tidy  CMakeLists.txt  Organism.cpp  Organism.h  Plant.cpp  Plant.h  Position.h  World.cpp  World.h  main.cpp
organisms/: Animal.cpp  Animal.h  Plant.cpp  Plant.h
organisms/animals/: Antelope.cpp  Antelope.h  Fox.cpp  Fox.h  Human.cpp  Human.h  Sheep.cpp  Sheep.h  Turtle.cpp  Turtle.h  Wolf.cpp  Wolf.h
organisms/plants/: Belladonna.cpp  Belladonna.h  Dandelion.cpp  Dandelion.h  Grass.cpp  Grass.h  Guarana.cpp  Guarana.h  SosnowskyHogweed.cpp  SosnowskyHogweed.h
